--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write ./src/**/*.{ts,tsx,css}"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.8",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
