--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "format": "prettier --write ./src/**/*.{ts,tsx,css}"
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@clerk/nextjs": "^4.29.8",
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.341.0",
+    "nanoid": "^5.0.6",
     "next": "^14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
