--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=clerk-publishable-key
 CLERK_SECRET_KEY=clerk-secret-key
 
