--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.8",
     "@hookform/resolvers": "^3.3.4",
+    "@prisma/client": "5.10.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
@@ -45,6 +46,7 @@
     "postcss": "^8.4.35",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "prisma": "5.10.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   }
