--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@clerk/nextjs": "^4.29.8",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.10.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.45.1",
     "@trpc/react-query": "^10.45.1",
