--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.10.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-context-menu": "^2.1.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,6 +28,8 @@
     "@trpc/server": "^10.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dexie": "^3.2.5",
+    "dexie-react-hooks": "^1.1.7",
     "lucide-react": "^0.341.0",
     "nanoid": "^5.0.6",
     "next": "^14.1.0",
